Fix landing page responsivity on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ html, body, #root, .App, .App>div {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 100%;
 }
 
 
